# Android-Filament-C-Example

./: .gitignore  .gitmodules  README.md  build.gradle  settings.gradle
app_filament_980/: build.gradle
app_filament_980/src/main/: AndroidManifest.xml
app_filament_980/src/main/assets/models/: axis.glb  cube_1m_centered.glb  hole_cube_1m_centered.glb
app_filament_980/src/main/cpp/: CMakeLists.txt  hello_filament.cpp
app_filament_980/src/main/cpp/android/: CallbackUtils.cpp  CallbackUtils.h  NioUtils.cpp  Path.cpp
app_filament_980/src/main/cpp/filament/cpp/: IBL.cpp
app_filament_980/src/main/cpp/filament/includes/gltfio/resources/: gltfresources.h
app_filament_980/src/main/cpp/filament/includes/ibl/: IBL.h
app_filament_980/src/main/java/ru/arvrlab/hardcoreFilament/filament/: FilamentHelper.java  HelloFilament.kt  Material.kt
app_filament_980/src/main/java/ru/arvrlab/hardcoreFilament/ui/: MainActivity.kt  MainViewModel.kt
app_filament_980/src/main/java/ru/arvrlab/hardcoreFilament/utils/: AssetReader.kt  NioUtils.java
app_filament_980/src/main/res/layout/: activity_main.xml
app_filament_980/src/main/res/menu/: main_menu.xml
app_filament_980/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
